Adjusts button styling on entertainment module to prevent left align issue on Tablet S

--- a/docs/css/responsive-modules.css
+++ b/docs/css/responsive-modules.css
@@ -1908,81 +1908,81 @@
   .entertainment-wrapper .entertainment .btn-holder {
     width: 100%;
     position: relative;
+    text-align: center;
   }
-  /* line 119, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
-  .entertainment-wrapper .entertainment .btn-holder .btn {
-    margin: 0 auto;
-    display: block;
-  }
-  /* line 124, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 120, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .tablet-full-width {
     width: 100%;
   }
 }
 @media (max-width: 47.9375em) {
-  /* line 132, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 128, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment {
     padding: 36px 0 58px 0;
   }
-  /* line 136, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 130, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  .entertainment-wrapper .entertainment .btn-holder {
+    text-align: left;
+  }
+  /* line 135, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .logo-container {
     margin-bottom: 7px;
     width: 100px;
   }
-  /* line 141, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 140, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-hd h1 {
     margin-bottom: 21px;
   }
-  /* line 145, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 144, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .mobile-img {
     margin-bottom: 19px;
   }
-  /* line 147, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 146, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .mobile-img img {
     width: 100%;
   }
-  /* line 152, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 151, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-hd {
     margin-bottom: 23px;
   }
-  /* line 156, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 155, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-benefits {
     margin-bottom: 13px;
   }
-  /* line 158, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 157, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-benefits .icon-holder {
     padding: 4px;
   }
-  /* line 163, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 162, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-media {
     margin-bottom: 11px;
   }
-  /* line 166, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 165, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-media .img i {
     font-size: 2em;
   }
-  /* line 172, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 171, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-media .no-float {
     float: left;
     margin-right: 11px;
     margin-bottom: 0;
   }
-  /* line 178, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 177, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-benefits > li {
     float: none;
     margin-left: 0;
     width: 100%;
     text-align: left;
   }
-  /* line 185, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 184, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-benefits > li + li {
     margin-left: 0;
   }
-  /* line 189, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 188, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment-benefits .bd {
     padding-top: 25px;
   }
-  /* line 193, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
+  /* line 192, ../../src/packages/modules/entertainment-e15/css/_responsive-entertainment-e15.scss */
   .entertainment-wrapper .entertainment .btn-holder .btn {
     margin: 0;
   }
